RE-6 - Fixing CSS Spacing Issue

--- a/RecommendationEngine/RecommendationEngine/FrontEnd/src/containers/TemplateConfigurationModal/TemplateConfigurationModal.css
+++ b/RecommendationEngine/RecommendationEngine/FrontEnd/src/containers/TemplateConfigurationModal/TemplateConfigurationModal.css
@@ -105,6 +105,7 @@ margin-bottom: 5%;
   font-size: 15px;
   min-width: 90%;
   margin-bottom: 2%;
+  /* background-color: orange; */
 }
 
 .title-dialog-1.MuiTypography-root{
@@ -114,6 +115,7 @@ margin-bottom: 5%;
   font-size: 12px;
   min-width: 90%;
   margin-bottom: 2%;
+  /* background-color: orange; */
 }
 
 .subtitle-dialog-1.MuiTypography-root{
@@ -121,9 +123,9 @@ margin-bottom: 5%;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 12px;
   width: 85%;
-  margin-top: 2%;
+  /* margin-top: 2%; */
   /* background: yellow; */
-  /* margin-bottom: 2%; */
+  padding-bottom: 2%;
 }
 
 .list-dialog-1.MuiTypography-root{
@@ -131,9 +133,7 @@ margin-bottom: 5%;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 12px;
   min-width: 90%;
-  margin-top: 2%;
-  margin-bottom: 7%;
-  /* background: orange; */
+  margin-bottom: 4%;
 }
 
 #item-align{
@@ -147,10 +147,16 @@ margin-bottom: 5%;
   padding: 0;
   margin-left: 4%;
   width: 100%;
+  padding-bottom: 2%;
+}
+
+#list-item{
+  margin: 5px 0;
 }
 
 .divider-item.MuiDivider-root{
   max-width: 90%;
+  margin-bottom: 1%
 }
 
 
